# aws-durable-execution-sdk-python

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  integration-tests.yml  pypi-publish.yml  scorecard.yml  sync-package.yml  test-parser.yml
botocore/data/lambdainternal-local/2015-03-31/: service-2.json
botocore/data/lambdainternal/2015-03-31/: service-2.json
docs/: architecture.md  getting-started.md  index.md
docs/advanced/: testing-modes.md
docs/core/: child-contexts.md  logger.md  map.md  steps.md  wait.md
docs/testing-patterns/: basic-tests.md  complex-workflows.md  stores.md
src/aws_durable_execution_sdk_python/: __about__.py  __init__.py  concurrency.py  config.py  context.py  exceptions.py  execution.py  lambda_context.py  lambda_service.py  logger.py  retries.py  serdes.py  state.py  threading.py  types.py  waits.py
src/aws_durable_execution_sdk_python/botocore/data/lambdainternal-local/2015-03-31/: service-2.json
src/aws_durable_execution_sdk_python/botocore/data/lambdainternal/2015-03-31/: service-2.json
src/aws_durable_execution_sdk_python/concurrency/: executor.py
src/aws_durable_execution_sdk_python/operation/: callback.py  child.py  invoke.py  map.py  parallel.py  step.py  wait.py  wait_for_condition.py
tests/: concurrency_test.py  config_test.py  context_test.py  durable_executions_python_language_sdk_test.py  exceptions_test.py  execution_test.py  lambda_context_test.py  lambda_service_test.py  logger_test.py  retries_test.py  serdes_test.py  state_test.py  test_helpers.py  threading_test.py  waits_test.py
tests/e2e/: execution_int_test.py
tests/operation/: callback_test.py  child_test.py  invoke_test.py  map_test.py  parallel_test.py  step_test.py  wait_for_condition_test.py  wait_test.py
