[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-durable-execution-sdk-python"
dynamic = ["version"]
description = 'This the Python SDK for AWS Lambda Durable Functions.'
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = []
authors = [{ name = "yaythomas", email = "tgaigher@amazon.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["boto3>=1.40.30"]

[project.urls]
Documentation = "https://github.com/aws/aws-durable-execution-sdk-python#readme"
Issues = "https://github.com/aws/aws-durable-execution-sdk-python/issues"
Source = "https://github.com/aws/aws-durable-execution-sdk-python"

[tool.hatch.build.targets.sdist]
packages = ["src/aws_durable_execution_sdk_python"]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_durable_execution_sdk_python"]

[tool.hatch.version]
path = "src/aws_durable_execution_sdk_python/__about__.py"

[tool.hatch.envs.test]
dependencies = ["coverage[toml]", "pytest", "pytest-cov"]

[tool.hatch.envs.test.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/aws_durable_execution_sdk_python --cov-fail-under=98"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "pytest"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aws_durable_execution_sdk_python tests}"

[tool.coverage.run]
source_pkgs = ["aws_durable_execution_sdk_python"]
branch = true
parallel = true
omit = ["src/aws_durable_execution_sdk_python/__about__.py"]

[tool.coverage.paths]
aws_durable_execution_sdk_python = [
  "src/aws_durable_execution_sdk_python",
  "*/aws-durable-execution-sdk-python/src/aws_durable_execution_sdk_python",
]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ARG001",
  "ARG002",
  "ARG005",
  "S101",
  "PLR2004",
  "PLR6301",
  "SIM117",
  "TRY301",
]
